--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-<head>
-<title>Taco</title>
-</head>
-<body>
-<p>Taco</p>
-</body>
+	<head>
+		<title>Xyllus</title>
+		<link rel="icon" type="image/x-icon" href="img/icon.png"/>
+	</head>
+	<body>
+		
+	</body>
 </html>
