--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<body id="body">
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
