--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 	<head>
 		<title>Xyllus</title>
-		<link rel="icon" type="image/x-icon" href="img/icon.png"/>
-		<link src="css/style.css" rel="stylesheet"/>
+		<link rel="icon" type="image/x-icon" href="/img/icon.png"/>
+		<link src="/css/style.css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	</head>
 	<body id="body">
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-		<script src="js/script.js"></script>
+		<script src="/js/script.js" type="text/javascript"></script>
 	</body>
 </html>
