--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	</head>
 	<body id="body">
+		<nav>
+			<div class="nav-wrapper">
+				<a href="/index.html" class="brand-logo"><i class="material-icons">dashboard</i>Xyllus</a>
+				<ul class="right hide-on-med-and-down">
+					<li><a href=""><i class="material-icons">developer_board</i></a></li>
+					<li><a href=""><i class="material-icons">people</i></a></li>
+					<li><a href=""><i class="material-icons">settings</i></a></li>
+				</ul>
+			</div>
+		</nav>
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<script src="/js/script.js" type="text/javascript"></script>
