--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<nav>
 			<div class="nav-wrapper">
 				<a href="/index.html" class="brand-logo"><i class="material-icons">dashboard</i>Xyllus</a>
+				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href=""><i class="material-icons">developer_board</i></a></li>
 					<li><a href=""><i class="material-icons">people</i></a></li>
@@ -17,7 +18,13 @@
 				</ul>
 			</div>
 		</nav>
+		<ul class="sidenav" id="mobile-xyllus">
+			<li><a href=""><i class="material-icons">developer_board</i></a></li>
+			<li><a href=""><i class="material-icons">people</i></a></li>
+			<li><a href=""><i class="material-icons">settings</i></a></li>
+		</ul>
 		
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<script src="/js/script.js" type="text/javascript"></script>
 	</body>
