--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			</div>
 		</nav>
 		<ul class="sidenav" id="mobile-xyllus">
-			<li><a href=""><i class="material-icons">developer_board</i></a></li>
-			<li><a href=""><i class="material-icons">people</i></a></li>
-			<li><a href=""><i class="material-icons">settings</i></a></li>
+			<li><a href=""><i class="material-icons">developer_board</i> Developer</a></li>
+			<li><a href=""><i class="material-icons">people</i> Social</a></li>
+			<li><a href=""><i class="material-icons">settings</i> API Database</a></li>
 		</ul>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
