--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body id="body">
 		<nav>
 			<div class="nav-wrapper">
-				<a href="/index.html" class="brand-logo"><i class="material-icons">dashboard</i>Xyllus</a>
+				<a href="/index.html" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
 				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href=""><i class="material-icons">developer_board</i></a></li>
