--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 			<div class="nav-wrapper">
 				<a href="/index.html" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
 				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+				<ul class="left hide-on-med-and-down">
+					<li><a href=""><i class="material-icons">face</i></a></li>
+				</ul>
 				<ul class="right hide-on-med-and-down">
 					<li><a href=""><i class="material-icons">developer_board</i></a></li>
 					<li><a href=""><i class="material-icons">people</i></a></li>
@@ -22,6 +25,8 @@
 			<li><a href=""><i class="material-icons">developer_board</i> Developer</a></li>
 			<li><a href=""><i class="material-icons">people</i> Social</a></li>
 			<li><a href=""><i class="material-icons">settings</i> API Database</a></li>
+			<li class="divider"></li>
+			<li><a href=""><i class="material-icons">face</i></a></li>
 		</ul>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
