--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 			<div class="nav-wrapper">
 				<a href="/index.html" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
 				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+				<script>
+					if(getCookie("username") == ""){
+				</script>
 				<ul class="left hide-on-med-and-down">
 					<li><a href="pages/join.html"><i class="material-icons">face</i></a></li>
 				</ul>
+				<script>
+					}
+				</script>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="pages/dev.html"><i class="material-icons">developer_board</i></a></li>
 					<li><a href="pages/social.html"><i class="material-icons">people</i></a></li>
