--- a/index.html
+++ b/index.html
@@ -11,15 +11,9 @@
 			<div class="nav-wrapper">
 				<a href="/index.html" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
 				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-				<script>
-					if(getCookie("username") == ""){
-				</script>
-				<ul class="left hide-on-med-and-down">
+				<ul class="left hide-on-med-and-down userHide">
 					<li><a href="pages/join.html"><i class="material-icons">face</i></a></li>
 				</ul>
-				<script>
-					}
-				</script>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="pages/dev.html"><i class="material-icons">developer_board</i></a></li>
 					<li><a href="pages/social.html"><i class="material-icons">people</i></a></li>
@@ -31,8 +25,8 @@
 			<li><a href="pages/dev.html"><i class="material-icons">developer_board</i> Developer</a></li>
 			<li><a href="pages/social.html"><i class="material-icons">people</i> Social</a></li>
 			<li><a href="pages/api.html"><i class="material-icons">settings</i> API Database</a></li>
-			<li class="divider"></li>
-			<li><a href="pages/join.html"><i class="material-icons">face</i> Login</a></li>
+			<li class="divider userHide"></li>
+			<li class="userHide"><a href="pages/join.html"><i class="material-icons">face</i> Login</a></li>
 		</ul>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
