--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
 			<li class="userHide"><a href="pages/join.html"><i class="material-icons">face</i> Login</a></li>
 		</ul>
 		
+		<div class="row">
+			<div class="col s4">
+				<div class="card blue-grey darken-1">
+					<div class="card-content white-text">
+						<span class="card-title">About Xyllus</span>
+						<p>Xyllus is a computer application and website development company. We started in May of 2017 as just an Indie Game Development group. From there, we expanded and grew to what we are today.</p>
+					</div>
+					<div class="card-action">
+						<a href="mailto:coffeedev@xyllus.com">Email</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<script src="/js/script.js" type="text/javascript"></script>
