--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 	<body id="body">
 		<nav class="nav-extended">
 			<div class="nav-wrapper">
-				<a href="Javascript:void(0);" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
-				<a href="Javascript:void(0);" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+				<a href="#" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
+				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="left hide-on-med-and-down userHide">
-					<li><a href="Javascript:void(0);"><i class="material-icons">face</i></a></li>
+					<li><a href="#"><i class="material-icons">face</i></a></li>
 				</ul>
 				<ul class="right hide-on-med-and-down">
-					<li><a href="Javascript:void(0);"><i class="material-icons">developer_board</i></a></li>
-					<li><a href="Javascript:void(0);"><i class="material-icons">people</i></a></li>
-					<li><a href="Javascript:void(0);"><i class="material-icons">settings</i></a></li>
+					<li><a href="#"><i class="material-icons">developer_board</i></a></li>
+					<li><a href="#"><i class="material-icons">people</i></a></li>
+					<li><a href="#"><i class="material-icons">settings</i></a></li>
 				</ul>
 			</div>
 		</nav>
 		<ul class="sidenav" id="mobile-xyllus">
-			<li><a href="Javascript:void(0);"><i class="material-icons">developer_board</i> Developer</a></li>
-			<li><a href="Javascript:void(0);"><i class="material-icons">people</i> Social</a></li>
-			<li><a href="Javascript:void(0);"><i class="material-icons">settings</i> API Database</a></li>
+			<li><a href="#"><i class="material-icons">developer_board</i> Developer</a></li>
+			<li><a href="#"><i class="material-icons">people</i> Social</a></li>
+			<li><a href="#"><i class="material-icons">settings</i> API Database</a></li>
 			<li class="divider userHide"></li>
-			<li class="userHide"><a href="Javascript:void(0);"><i class="material-icons">face</i> Login</a></li>
+			<li class="userHide"><a href="#"><i class="material-icons">face</i> Login</a></li>
 		</ul>
 		
 		<div class="row">
