--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 				<a href="#" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
 				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="left hide-on-med-and-down userHide">
-					<li><a href="#"><i class="material-icons">face</i></a></li>
+					<li page="/"><a href="#"><i class="material-icons">face</i></a></li>
 				</ul>
 				<ul class="right hide-on-med-and-down">
-					<li><a href="#"><i class="material-icons">developer_board</i></a></li>
+					<li page="api"><a href="#"><i class="material-icons">developer_board</i></a></li>
 					<li><a href="#"><i class="material-icons">people</i></a></li>
 					<li><a href="#"><i class="material-icons">settings</i></a></li>
 				</ul>
