--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 				<a href="#" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
 				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="left hide-on-med-and-down userHide">
-					<li page="/"><a href="#"><i class="material-icons">face</i></a></li>
+					<li page="join"><a href="#"><i class="material-icons">face</i></a></li>
 				</ul>
 				<ul class="right hide-on-med-and-down">
-					<li page="api"><a href="#"><i class="material-icons">developer_board</i></a></li>
-					<li><a href="#"><i class="material-icons">people</i></a></li>
-					<li><a href="#"><i class="material-icons">settings</i></a></li>
+					<li page="dev"><a href="#"><i class="material-icons">developer_board</i></a></li>
+					<li page="social"><a href="#"><i class="material-icons">people</i></a></li>
+					<li page="api"><a href="#"><i class="material-icons">settings</i></a></li>
 				</ul>
 			</div>
 		</nav>
 		<ul class="sidenav" id="mobile-xyllus">
-			<li><a href="#"><i class="material-icons">developer_board</i> Developer</a></li>
-			<li><a href="#"><i class="material-icons">people</i> Social</a></li>
-			<li><a href="#"><i class="material-icons">settings</i> API Database</a></li>
+			<li page="dev"><a href="#"><i class="material-icons">developer_board</i> Developer</a></li>
+			<li page="social"><a href="#"><i class="material-icons">people</i> Social</a></li>
+			<li page="api"><a href="#"><i class="material-icons">settings</i> API Database</a></li>
 			<li class="divider userHide"></li>
-			<li class="userHide"><a href="#"><i class="material-icons">face</i> Login</a></li>
+			<li class="userHide" page="join"><a href="#"><i class="material-icons">face</i> Login</a></li>
 		</ul>
 		
 		<div class="row">
