--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 	<head>
 		<title>Xyllus</title>
-		<link rel="icon" type="image/x-icon" href="/img/icon.png"/>
-		<link src="/css/style.css" rel="stylesheet"/>
+		<link rel="icon" type="image/x-icon" href="img/icon.png"/>
+		<link src="css/style.css" rel="stylesheet"/>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<link type="text/css" rel="stylesheet" media="screen,projection" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	<body id="body">
 		<nav class="nav-extended">
@@ -12,21 +13,21 @@
 				<a href="#" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
 				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="left hide-on-med-and-down userHide">
-					<li page="join"><a href="#"><i class="material-icons">face</i></a></li>
+					<li page="join"><a href="#"><i class="material-icons left">face</i></a></li>
 				</ul>
 				<ul class="right hide-on-med-and-down">
-					<li page="dev"><a href="#"><i class="material-icons">developer_board</i></a></li>
-					<li page="social"><a href="#"><i class="material-icons">people</i></a></li>
-					<li page="api"><a href="#"><i class="material-icons">settings</i></a></li>
+					<li><a href="#"><i class="material-icons left">developer_board</i> Developer</a></li>
+					<li><a href="#"><i class="material-icons left">people</i> Social</a></li>
+					<li><a href="#"><i class="material-icons left">settings</i> API</a></li>
 				</ul>
 			</div>
 		</nav>
 		<ul class="sidenav" id="mobile-xyllus">
-			<li page="dev"><a href="#"><i class="material-icons">developer_board</i> Developer</a></li>
-			<li page="social"><a href="#"><i class="material-icons">people</i> Social</a></li>
-			<li page="api"><a href="#"><i class="material-icons">settings</i> API Database</a></li>
+			<li page="dev"><a href="#"><i class="material-icons left">developer_board</i> Developer</a></li>
+			<li page="social"><a href="#"><i class="material-icons left">people</i> Social</a></li>
+			<li page="api"><a href="#"><i class="material-icons left">settings</i> API Database</a></li>
 			<li class="divider userHide"></li>
-			<li class="userHide" page="join"><a href="#"><i class="material-icons">face</i> Login</a></li>
+			<li class="userHide" page="join"><a href="#"><i class="material-icons left">face</i> Login</a></li>
 		</ul>
 		
 		<div class="row">
@@ -44,7 +45,7 @@
 		</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-		<script src="/js/script.js" type="text/javascript"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" type="text/javascript"></script>
+		<script src="js/script.js" type="text/javascript"></script>
 	</body>
 </html>
