--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<a href="#" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
 				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="left hide-on-med-and-down userHide">
-					<li page="join"><a href="#"><i class="material-icons left">face</i></a></li>
+					<li><a href="#"><i class="material-icons left">face</i> Login</a></li>
 				</ul>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="#"><i class="material-icons left">developer_board</i> Developer</a></li>
