--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 			</div>
 		</nav>
 		<ul class="sidenav" id="mobile-xyllus">
-			<li page="dev"><a href="#"><i class="material-icons left">developer_board</i> Developer</a></li>
-			<li page="social"><a href="#"><i class="material-icons left">people</i> Social</a></li>
-			<li page="api"><a href="#"><i class="material-icons left">settings</i> API Database</a></li>
+			<li><a href="#"><i class="material-icons left">developer_board</i> Developer</a></li>
+			<li><a href="#"><i class="material-icons left">people</i> Social</a></li>
+			<li><a href="#"><i class="material-icons left">settings</i> API Database</a></li>
 			<li class="divider userHide"></li>
-			<li class="userHide" page="join"><a href="#"><i class="material-icons left">face</i> Login</a></li>
+			<li class="userHide"><a href="#"><i class="material-icons left">face</i> Login</a></li>
 		</ul>
 		
 		<div class="row">
