--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 				<a href="#" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
 				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="left hide-on-med-and-down userHide">
-					<li><a href="#"><i class="material-icons left">face</i> Login</a></li>
+					<li><a href="#"><i class="material-icons left">face</i> Join</a></li>
 				</ul>
 				<ul class="right hide-on-med-and-down">
-					<li><a href="#"><i class="material-icons left">developer_board</i> Developer</a></li>
+					<li><a href="#"><i class="material-icons left">developer_board</i> Dev</a></li>
 					<li><a href="#"><i class="material-icons left">people</i> Social</a></li>
 					<li><a href="#"><i class="material-icons left">settings</i> API</a></li>
 				</ul>
 			</div>
 		</nav>
 		<ul class="sidenav" id="mobile-xyllus">
-			<li><a href="#"><i class="material-icons left">developer_board</i> Developer</a></li>
+			<li><a href="#"><i class="material-icons left">developer_board</i> Dev</a></li>
 			<li><a href="#"><i class="material-icons left">people</i> Social</a></li>
-			<li><a href="#"><i class="material-icons left">settings</i> API Database</a></li>
+			<li><a href="#"><i class="material-icons left">settings</i> API</a></li>
 			<li class="divider userHide"></li>
-			<li class="userHide"><a href="#"><i class="material-icons left">face</i> Login</a></li>
+			<li class="userHide"><a href="#"><i class="material-icons left">face</i> Join</a></li>
 		</ul>
 		
 		<div class="row">
