--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body id="body">
 		<nav class="nav-extended">
 			<div class="nav-wrapper">
-				<a href="Javascript:void(0)" onclick="document.reload(true)" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
+				<a href="Javascript:void(0)" onclick="location.reload(true);" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
 				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="left hide-on-med-and-down userHide">
 					<li><a href="#"><i class="material-icons left">face</i> Join</a></li>
