--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</ul>
 		
 		<div class="row">
-			<div class="col s4">
+			<div class="col l4 m4 s12">
 				<div class="card blue-grey darken-1">
 					<div class="card-content white-text">
 						<span class="card-title">About Xyllus</span>
@@ -46,6 +46,7 @@
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" type="text/javascript"></script>
+		<script src="js/sha.js" type="text/javascript"></script>
 		<script src="js/script.js" type="text/javascript"></script>
 	</body>
 </html>
