--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
 			<li class="userHide"><a href="#"><i class="material-icons left">face</i> Join</a></li>
 		</ul>
 		
-		<div class="row">
-			<div class="col l4 m6 s12">
-				<div class="card blue-grey darken-1">
-					<div class="card-content white-text">
-						<span class="card-title">About Xyllus</span>
-						<p>Xyllus is a computer application and website development company. We started in May of 2017 as just an Indie Game Development group. From there, we expanded and grew to what we are today.</p>
-					</div>
-					<div class="card-action">
-						<a href="mailto:coffeedev@xyllus.com">Email</a>
+		<div class="body">
+			<div class="row">
+				<div class="col l4 m6 s12">
+					<div class="card blue-grey darken-1">
+						<div class="card-content white-text">
+							<span class="card-title">About Xyllus</span>
+							<p>Xyllus is a computer application and website development company. We started in May of 2017 as just an Indie Game Development group. From there, we expanded and grew to what we are today.</p>
+						</div>
+						<div class="card-action">
+							<a href="mailto:coffeedev@xyllus.com">Email</a>
+						</div>
 					</div>
 				</div>
 			</div>
