--- a/pages/join.html
+++ b/pages/join.html
@@ -1,9 +1,11 @@
-<div class="col l4 m6 s12">
-	<div class="input-field col ">
-		<i class="material-icons prefix">account_circle</i>
-		<input id="icon_prefix" type="text" class="validate">
-		<label for="icon_prefix">Username</label>
-		<span class="helper-text" data-error="ERROR" data-success="Great!">Alpha-numeric Characters</span>
+<div class="row align-items-center justify-content-end row-cols-1">
+	<div class="col l4 m6 s12">
+		<div class="input-field col">
+			<i class="material-icons prefix">account_circle</i>
+			<input id="icon_prefix" type="text" class="validate">
+			<label for="icon_prefix">Username</label>
+			<span class="helper-text" data-error="ERROR" data-success="Great!">Alpha-numeric Characters</span>
+		</div>
 	</div>
 </div>
 
