--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<li class="userHide"><a href="#"><i class="material-icons left">face</i> Join</a></li>
 		</ul>
 		
-		<div class="body">
+		<div class="container body">
 			<div class="row">
 				<div class="col l4 m6 s12">
 					<div class="card blue-grey darken-1">
