--- a/index.html
+++ b/index.html
@@ -1,40 +1,19 @@
 <html>
 	<head>
-		<title>Xyllus</title>
-		<link rel="icon" type="image/x-icon" href="img/icon.png"/>
-		<link src="css/style.css" rel="stylesheet"/>
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<link type="text/css" rel="stylesheet" media="screen,projection" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<title>XavierMB's Games</title>
 	</head>
-	<body id="body">
-		<nav class="nav-extended">
-			<div class="nav-wrapper">
-				<a href="Javascript:void(0)" onclick="location.reload(true);" class="brand-logo center"><i class="material-icons">dashboard</i>Xyllus</a>
-				<a href="#" data-target="mobile-xyllus" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-				<ul class="left hide-on-med-and-down userHide">
-					<li><a href="#"><i class="material-icons left">face</i> Join</a></li>
-				</ul>
-				<ul class="right hide-on-med-and-down">
-					<li><a href="#"><i class="material-icons left">developer_board</i> Dev</a></li>
-					<li><a href="#"><i class="material-icons left">people</i> Social</a></li>
-					<li><a href="#"><i class="material-icons left">settings</i> API</a></li>
-				</ul>
-			</div>
-		</nav>
-		<ul class="sidenav" id="mobile-xyllus">
-			<li><a href="#"><i class="material-icons left">developer_board</i> Dev</a></li>
-			<li><a href="#"><i class="material-icons left">people</i> Social</a></li>
-			<li><a href="#"><i class="material-icons left">settings</i> API</a></li>
-			<li class="divider userHide"></li>
-			<li class="userHide"><a href="#"><i class="material-icons left">face</i> Join</a></li>
-		</ul>
-		
-		<div class="container body">
-		</div>
-		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js" type="text/javascript"></script>
-		<script src="js/script.js" type="text/javascript"></script>
+	<body>
+		<table>
+			<thead>
+				<td>Name</td>
+				<td>Link</td>
+				<td>Description</td>
+			</thead>
+			<tr>
+				<td>Logic Gate Game</td>
+				<td><a href="/logicGateGame/index.html">HERE</a></td>
+				<td>This is just a simple game about LOGIC GATES!!!</td>
+			</tr>
+		</table>
 	</body>
 </html>
