--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <html>
 	<head>
 		<title>XavierMB's Games</title>
+		<style>
+			table{
+				position: fixed;
+				left: 50%;
+				top: 50%;
+				transform: translate(-50%, -50%);
+			}
+			thead td{
+				border-bottom:1px solid black;
+			}
+		</style>
 	</head>
 	<body>
 		<table>
@@ -11,7 +22,7 @@
 			</thead>
 			<tr>
 				<td>Logic Gate Game</td>
-				<td><a href="/logicGateGame/index.html">HERE</a></td>
+				<td><a href="logicGateGame/index.html">HERE</a></td>
 				<td>This is just a simple game about LOGIC GATES!!!</td>
 			</tr>
 		</table>
