--- a/logicGateGame/index.html
+++ b/logicGateGame/index.html
@@ -17,6 +17,7 @@
 		var canvasW, canvasH;
 	</script>
 	<script src="js/functions.js"></script>
+	<script src="js/particles.js"></script>
 	<script src="js/game.js"></script>
 	<script src="js/loop.js"></script>
 </body>
