--- a/logicGateGame/index.html
+++ b/logicGateGame/index.html
@@ -18,6 +18,8 @@
 	</script>
 	<script src="js/functions.js"></script>
 	<script src="js/particles.js"></script>
+	<script src="js/wires.js"></script>
+	<script src="js/gates.js"></script>
 	<script src="js/game.js"></script>
 	<script src="js/loop.js"></script>
 </body>
