--- a/logicGateGame/index.html
+++ b/logicGateGame/index.html
@@ -2,6 +2,7 @@
 <head>
 	<title>The Game</title>
 	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
 		body, document{
 			padding:0;
 			margin:0;
