--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 				<td><a href="logicGateGame/index.html">HERE</a></td>
 				<td>This is just a simple game about LOGIC GATES!!!</td>
 			</tr>
+			<tr>
+				<td>LGG Level Editor</td>
+				<td><a href="LGG_LevelEditor/index.html">HERE</a></td>
+				<td>A level editor for Logic Gate Game</td>
+			</tr>
 		</table>
 	</body>
 </html>
