--- a/logicGateGame/index.html
+++ b/logicGateGame/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>The Game</title>
@@ -6,6 +7,9 @@
 		body, document{
 			padding:0;
 			margin:0;
+			width: 100%;
+			height: 100%;
+			overflow:hidden;
 		}
 	</style>
 <head>
