--- a/LGG_LevelEditor/index.html
+++ b/LGG_LevelEditor/index.html
@@ -1,27 +1,31 @@
+<!DOCTYPE HTML>
 <html>
-<head>
-	<title>Level Editor</title>
-	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
-		body, document{
-			padding:0;
-			margin:0;
-		}
-	</style>
-<head>
-<body>
-	<canvas id="main"></canvas>
-	<script>
-		//Global Variables (WILL RESET EVERY REFRESH)
-		var canvas = document.getElementById("main");
-		var ctx = canvas.getContext("2d");
-		var canvasW, canvasH;
-	</script>
-	<script src="../logicGateGame/js/functions.js"></script>
-	<script src="../logicGateGame/js/particles.js"></script>
-	<script src="../logicGateGame/js/wires.js"></script>
-	<script src="../logicGateGame/js/gates.js"></script>
-	<script src="js/editor.js"></script>
-	<script src="js/loop.js"></script>
-</body>
+	<head>
+		<title>Level Editor</title>
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+			body, document{
+				padding:0;
+				margin:0;
+				width: 100%;
+				height: 100%;
+				overflow:hidden;
+			}
+		</style>
+	<head>
+	<body>
+		<canvas id="main"></canvas>
+		<script>
+			//Global Variables (WILL RESET EVERY REFRESH)
+			var canvas = document.getElementById("main");
+			var ctx = canvas.getContext("2d");
+			var canvasW, canvasH;
+		</script>
+		<script src="../logicGateGame/js/functions.js"></script>
+		<script src="../logicGateGame/js/particles.js"></script>
+		<script src="../logicGateGame/js/wires.js"></script>
+		<script src="../logicGateGame/js/gates.js"></script>
+		<script src="js/editor.js"></script>
+		<script src="js/loop.js"></script>
+	</body>
 </html>
