A little bit more
Just an update for the game. Hopefully I can get myself to code some more...

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 				transform: translate(-50%, -50%);
 			}
 			thead td{
-				border-bottom:1px solid black;
+				border-bottom:2px solid black;
+			}
+			.line td{
+				border-top: 1px solid black;
 			}
 		</style>
 	</head>
@@ -30,6 +33,11 @@
 				<td>LGG Level Editor</td>
 				<td><a href="LGG_LevelEditor/index.html">HERE</a></td>
 				<td>A level editor for Logic Gate Game</td>
+			</tr>
+			<tr class="line">
+			<td>Progression</td>
+			<td><a href="Progression/index.html">HERE</td>
+			<td>An idle game... about... I dont know anymore</td>
 			</tr>
 		</table>
 	</body>
