--- a/logicGateGame/index.html
+++ b/logicGateGame/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>The Game</title>
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
 		body, document{
 			padding:0;
 			margin:0;
