Adding to ITCH.IO
If you wanna purchase the game, it really helps out! I'll continue posting updates to github, but it really helps me out if you purchase it from itch

--- a/Progression/index.html
+++ b/Progression/index.html
@@ -49,11 +49,13 @@
 					<td>PROGRESS</td>
 				</tr>
 			</thead>
-			<tbody id="game">
-				<td>ROCK</td>
-				<td>It's... a rock.</td>
-				<td>FREE</td>
-				<td><progress value="32" max="100"></progress></td>
+			<tbody>
+				<tr>
+					<td>ROCK</td>
+					<td>It's... a rock.</td>
+					<td>FREE</td>
+					<td><progress value="32" max="100"></progress></td>
+				</tr>
 			</tbody>
 		<table>
 		<script src="js/game.js"></script>
