--- a/logicGateGame/index.html
+++ b/logicGateGame/index.html
@@ -25,6 +25,7 @@
 	<script src="js/particles.js"></script>
 	<script src="js/wires.js"></script>
 	<script src="js/gates.js"></script>
+	<script src="js/omnigate.js"></script>
 	<script src="js/game.js"></script>
 	<script src="js/loop.js"></script>
 </body>
