Sorry, not sorry
I'm doing this so I can push out a REALLY cool UI update (procrastinating the omnigate)

--- a/logicGateGame/index.html
+++ b/logicGateGame/index.html
@@ -20,6 +20,7 @@
 		var canvas = document.getElementById("main");
 		var ctx = canvas.getContext("2d");
 		var canvasW, canvasH;
+		alert("THE GAME MAY BE BROKEN AT THIS TIME (20SEP21 1618 EST)");
 	</script>
 	<script src="js/functions.js"></script>
 	<script src="js/particles.js"></script>
