--- a/logicGateGame/index.html
+++ b/logicGateGame/index.html
@@ -26,6 +26,7 @@
 	<script src="js/wires.js"></script>
 	<script src="js/gates.js"></script>
 	<script src="js/omnigate.js"></script>
+	<script src="js/audio.js"></script>
 	<script src="js/game.js"></script>
 	<script src="js/loop.js"></script>
 </body>
