--- a/logicGateGame/finish.html
+++ b/logicGateGame/finish.html
@@ -29,6 +29,7 @@
 				I wanted to create an experience that was both puzzling yet educational. I hope that experience has been shown to you.
 			</p>
 			<button onclick="deleteSave();">RESTART</button>
+			<button onclick="window.location = 'custom.html';">PLAY CUSTOM LEVELS</button>
 		</div>
 		<script src="js/functions.js"></script>
 		<script>
