--- a/logicGateGame/index.html
+++ b/logicGateGame/index.html
@@ -20,6 +20,8 @@
 		var canvas = document.getElementById("main");
 		var ctx = canvas.getContext("2d");
 		var canvasW, canvasH;
+		var winFunction; //The function that is called when the battery is full
+		var isCustomGame = false; //Changes to true when trying to load any custom games 
 	</script>
 	<script src="js/functions.js"></script>
 	<script src="js/particles.js"></script>
