Updates, tweaks, and menu fixes!
A lot of stuff went in to this update!

--- a/LGG_LevelEditor/index.html
+++ b/LGG_LevelEditor/index.html
@@ -33,6 +33,8 @@
 			<li><textarea placeholder="Level Data..." rows="4" cols="30"></textarea></li>
 			<li><button>SAVE</button></li>
 			<li><button>LOAD</button></li>
+			<li><button>PLAY</button></li>
+			<li style="visibility:hidden;">SECRET TUNNEL!</li>
 		</ul>
 		<script>
 			//Global Variables (WILL RESET EVERY REFRESH)
