--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 				<td><a href="LGG_LevelEditor/index.html">HERE</a></td>
 				<td>A level editor for Logic Gate Game</td>
 			</tr>
+			<tr>
+				<td>LGG Level Directory</td>
+				<td><a href="LGG_LevelDirectory/index.html">HERE</a></td>
+				<td>A custom level directory for Logic Gate Game</td>
+			</tr>
 			<tr class="line">
 			<td>Progression</td>
 			<td><a href="Progression/index.html">HERE</td>
