--- a/logicGateGame/index.html
+++ b/logicGateGame/index.html
@@ -20,8 +20,10 @@
 		var canvas = document.getElementById("main");
 		var ctx = canvas.getContext("2d");
 		var canvasW, canvasH;
+		var titlePage = "Logistics";
 		var winFunction; //The function that is called when the battery is full
 		var isCustomGame = false; //Changes to true when trying to load any custom games 
+		var customGameInit = function(){ console.log("There is no (custom) game...."); };
 	</script>
 	<script src="js/functions.js"></script>
 	<script src="js/particles.js"></script>
