--- a/LGG_LevelDirectory/index.html
+++ b/LGG_LevelDirectory/index.html
@@ -21,6 +21,7 @@
 			var ctx = canvas.getContext("2d");
 			var canvasW, canvasH;
 		</script>
+		<p>I'm trying to work on this... sorry....</p>
 		<script src="js/db.js"></script>
 		<script src="js/loop.js"></script>
 	</body>
