--- a/LGG_LevelDirectory/index.html
+++ b/LGG_LevelDirectory/index.html
@@ -10,12 +10,15 @@
 				width: 100%;
 				height: 100%;
 				overflow:hidden;
+				font-family:"Caveat";
 			}
 			table{
 				position:absolute;
 				left:0%;
 				top:0%;
-				background-color:gray;
+				width:100%;
+				height:100%;
+				text-align:center;
 			}
 		</style>
 	<head>
