To test the cookies
needing to upload so I can test the cookies

--- a/LGG_LevelDirectory/index.html
+++ b/LGG_LevelDirectory/index.html
@@ -27,7 +27,6 @@
 			<thead>
 				<tr>
 					<td>Name</td>
-					<td>Description</td>
 					<td>Author</td>
 					<td>Play</td>
 				</tr>
@@ -43,6 +42,7 @@
 			var canvasW, canvasH;
 		</script>
 		<script src="https://not-an-aardvark.github.io/snoowrap/snoowrap-v1.js"></script>
+		<script src="../logicGateGame/js/functions.js"></script>
 		<script src="js/db.js"></script>
 		<script src="js/loop.js"></script>
 	</body>
