Fixing some stuff
fixing stuff in the levels.

--- a/LGG_LevelEditor/index.html
+++ b/LGG_LevelEditor/index.html
@@ -56,12 +56,11 @@
 				</label>
 			</li>
 			<li class="inline"><button id="saveButton">SAVE</button></li>
-			<li class="inline"><button id="loadButton">LOAD</button></li>
 			<li class="inline"><button id="playButton">PLAY</button></li>
 			<li style="visibility:hidden;" id="errorCode">SECRET TUNNEL!</li>
 		</ul>
 		<div id="bottom" title="New level inside omniN brackets...">
-			For OMNIGATES, look at the code <a href="https://xaviermb289.github.io/logicGateGame/level/11.json">here</a> or <a href="https://xaviermb289.github.io/logicGateGame/level/10.json">here</a> to see what to do
+			For OMNIGATES, look at the code <a href="https://xaviermb289.github.io/logicGateGame/level/11.json" target="_blank">here</a> or <a href="https://xaviermb289.github.io/logicGateGame/level/10.json" target="_blank">here</a> to see what to do
 		</div>
 		<script>
 			//Global Variables (WILL RESET EVERY REFRESH)
