--- a/logicGateGame/custom.html
+++ b/logicGateGame/custom.html
@@ -20,7 +20,7 @@
 		var canvas = document.getElementById("main");
 		var ctx = canvas.getContext("2d");
 		var canvasW, canvasH;
-		var titlePage = "Custom Levels";
+		var titlePage = "Custom Level";
 		var winFunction; //The function that is called when the battery is full
 		var isCustomGame = true; //Changes to true when trying to load any custom games 
 		var customGameInit = function(){ console.log("There is no (custom) game...."); };
