--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 				<td>A custom level directory for Logic Gate Game</td>
 			</tr>
 			<tr class="line">
-			<td>Progression</td>
-			<td><a href="Progression/index.html">HERE</td>
-			<td>An idle game... about... I dont know anymore</td>
+				<td>IDLE</td>
+				<td><a href="IDLE/index.html">HERE</td>
+				<td>Idealistic Dungeon Life Emulator</td>
 			</tr>
 		</table>
 	</body>
