--- a/IDLE/index.html
+++ b/IDLE/index.html
@@ -47,6 +47,7 @@
 			var ctx = canvas.getContext("2d");
 			var canvasW, canvasH;
 		</script>
+		<script src="js/audio.js"></script>
 		<script src="js/game.js"></script>
 		<script src="js/loop.js"></script>
 	</body>
