--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 				<td>A custom level directory for Logic Gate Game</td>
 			</tr>
 			<tr class="line">
-				<td>IDLE</td>
-				<td><a href="IDLE/index.html">HERE</td>
-				<td>Idealistic Dungeon Life Emulator</td>
+				<td>Simple Tower Game</td>
+				<td><a href="JAR_Games/SimpleTowerGame.jar" download>HERE</td>
+				<td>Uses WS, ENTER, CTRL, and SPACE keys</td>
 			</tr>
 		</table>
 	</body>
