--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 				<td>Description</td>
 			</thead>
 			<tr>
+				<td>Resume</td>
+				<td><a href="resume.html">HERE</a></td>
+				<td>This is a simple resume...</td>
+			</tr>
+			<tr class="line">
 				<td>Logic Gate Game</td>
 				<td><a href="logicGateGame/index.html">HERE</a></td>
 				<td>This is just a simple game about LOGIC GATES!!!</td>
