--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</thead>
 			<tr>
 				<td>Resume</td>
-				<td><a href="resume.html">HERE</a></td>
+				<td><a href="resume/index.html">HERE</a></td>
 				<td>This is a simple resume...</td>
 			</tr>
 			<tr class="line">
