--- a/resume/index.html
+++ b/resume/index.html
@@ -1,1 +1,53 @@
-
+<html>
+	<head>
+		<link href="style.css" rel="stylesheet"/>
+		<meta charset="UTF-8"/>
+		<meta name="author" content="Xavier Bennett"/>
+		<title>Xavier's Resume</title>
+	</head>
+	<body>
+		<!---->
+		<div id='menu-wrapper'>
+			<div id='menu-header'>Resume</div>
+			<ul id='menu-selectors'>
+				<li class='main-menu selected'>About Me</li>
+				<li class='main-menu'>Projects</li>
+				<li class='main-menu'>Skills</li>
+				<li class='main-menu'>Work History</li>
+			</ul>
+		</div>
+		<div id='about-me hidden'>
+			<div id='menu-header'>About Me</div>
+			<ul id='menu-selectors'>
+				<li class='hidden'>Name: Xavier Bennett</li>
+				<li class='hidden'>Veteran Status: True</li>
+				<li class='hidden'>Technically Capable: True</li>
+				<li class='hidden'>Likes Long Walks on the Beach: False</li>
+			</ul>
+		</div>
+		<div id='projects hidden'>
+			<div id='menu-header'>Projects</div>
+			<ul id='menu-selectors'>
+				<li class='hidden'><a href="XavierMB289.github.io" target="">Github</a></li>
+				<li class='hidden'><a href="https://codepen.io/XavierMB" target="">CodePen.io</a></li>
+				<li class='hidden'><a href="https://scratch.mit.edu/search/projects?q=Silverneon123">Scratch.mit.edu</a></li>
+			</ul>
+		</div>
+		<div id='skills hidden'>
+			<div id='menu-header'>Skills</div>
+			<ul id='menu-selectors'>
+				<li class='hidden'>Java since 2017</li>
+				<li class='hidden'>HTML,CSS,JS,PHP,JQuery since 2015</li>
+			</ul>
+		</div>
+		<div id='history hidden'>
+			<div id='menu-header'>Work History</div>
+			<ul id='menu-selectors'>
+				<li class='hidden'>BAE Systems (Apr 2022 - Aug 2023)</li>
+				<li class='hidden'>ARNG (Aug 2017 - Aug 2023)</li>
+			</ul>
+		</div>
+		<script src='https://code.jquery.com/jquery-latest.min.js'/>
+		<script src="script.js"/>
+	</body>
+</html>
