--- a/resume/index.html
+++ b/resume/index.html
@@ -10,10 +10,10 @@
 		<div id='menu-wrapper'>
 			<div id='menu-header'>Resume</div>
 			<ul id='menu-selectors'>
-				<li class='main-menu selected'>About Me</li>
-				<li class='main-menu'>Projects</li>
-				<li class='main-menu'>Skills</li>
-				<li class='main-menu'>Work History</li>
+				<li class='main-menu selected' goto="about-me">About Me</li>
+				<li class='main-menu' goto="projects">Projects</li>
+				<li class='main-menu' goto="skills">Skills</li>
+				<li class='main-menu' goto="history">Work History</li>
 			</ul>
 		</div>
 		<div id='about-me hidden'>
