--- a/resume/index.html
+++ b/resume/index.html
@@ -17,7 +17,7 @@
 				<li class='main-menu' goto="history">Work History</li>
 			</ul>
 		</div>
-		<div id='about-me hidden'>
+		<div id='about-me' class='hidden'>
 			<div id='menu-header'>About Me</div>
 			<ul id='menu-selectors'>
 				<li class='hidden'>Name: Xavier Bennett</li>
@@ -26,7 +26,7 @@
 				<li class='hidden'>Likes Long Walks on the Beach: False</li>
 			</ul>
 		</div>
-		<div id='projects hidden'>
+		<div id='projects' class='hidden'>
 			<div id='menu-header'>Projects</div>
 			<ul id='menu-selectors'>
 				<li class='hidden'><a href="XavierMB289.github.io" target="">Github</a></li>
@@ -34,14 +34,14 @@
 				<li class='hidden'><a href="https://scratch.mit.edu/search/projects?q=Silverneon123">Scratch.mit.edu</a></li>
 			</ul>
 		</div>
-		<div id='skills hidden'>
+		<div id='skills' class='hidden'>
 			<div id='menu-header'>Skills</div>
 			<ul id='menu-selectors'>
 				<li class='hidden'>Java since 2017</li>
 				<li class='hidden'>HTML,CSS,JS,PHP,JQuery since 2015</li>
 			</ul>
 		</div>
-		<div id='history hidden'>
+		<div id='history' class='hidden'>
 			<div id='menu-header'>Work History</div>
 			<ul id='menu-selectors'>
 				<li class='hidden'>BAE Systems (Apr 2022 - Aug 2023)</li>
