--- a/resume/index.html
+++ b/resume/index.html
@@ -48,7 +48,7 @@
 				<li class='hidden'>ARNG (Aug 2017 - Aug 2023)</li>
 			</ul>
 		</div>
-		<script src='https://code.jquery.com/jquery-latest.min.js'/>
-		<script src="script.js"/>
+		<script src='https://code.jquery.com/jquery-latest.min.js'></script>
+		<script src="script.js"/></script>
 	</body>
 </html>
