--- a/resume/index.html
+++ b/resume/index.html
@@ -20,32 +20,32 @@
 		<div id='about-me' class='hidden'>
 			<div id='menu-header'>About Me</div>
 			<ul id='menu-selectors'>
-				<li class='hidden'>Name: Xavier Bennett</li>
-				<li class='hidden'>Veteran Status: True</li>
-				<li class='hidden'>Technically Capable: True</li>
-				<li class='hidden'>Likes Long Walks on the Beach: False</li>
+				<li>Name: Xavier Bennett</li>
+				<li>Veteran Status: True</li>
+				<li>Technically Capable: True</li>
+				<li>Likes Long Walks on the Beach: False</li>
 			</ul>
 		</div>
 		<div id='projects' class='hidden'>
 			<div id='menu-header'>Projects</div>
 			<ul id='menu-selectors'>
-				<li class='hidden'><a href="XavierMB289.github.io" target="">Github</a></li>
-				<li class='hidden'><a href="https://codepen.io/XavierMB" target="">CodePen.io</a></li>
-				<li class='hidden'><a href="https://scratch.mit.edu/search/projects?q=Silverneon123">Scratch.mit.edu</a></li>
+				<li><a href="XavierMB289.github.io" target="">Github</a></li>
+				<li><a href="https://codepen.io/XavierMB" target="">CodePen.io</a></li>
+				<li><a href="https://scratch.mit.edu/search/projects?q=Silverneon123">Scratch.mit.edu</a></li>
 			</ul>
 		</div>
 		<div id='skills' class='hidden'>
 			<div id='menu-header'>Skills</div>
 			<ul id='menu-selectors'>
-				<li class='hidden'>Java since 2017</li>
-				<li class='hidden'>HTML,CSS,JS,PHP,JQuery since 2015</li>
+				<li>Java since 2017</li>
+				<li>HTML,CSS,JS,PHP,JQuery since 2015</li>
 			</ul>
 		</div>
 		<div id='history' class='hidden'>
 			<div id='menu-header'>Work History</div>
 			<ul id='menu-selectors'>
-				<li class='hidden'>BAE Systems (Apr 2022 - Aug 2023)</li>
-				<li class='hidden'>ARNG (Aug 2017 - Aug 2023)</li>
+				<li>BAE Systems (Apr 2022 - Aug 2023)</li>
+				<li>ARNG (Aug 2017 - Aug 2023)</li>
 			</ul>
 		</div>
 		<script src='https://code.jquery.com/jquery-latest.min.js'></script>
