--- a/resume/index.html
+++ b/resume/index.html
@@ -29,9 +29,9 @@
 		<div id='projects' class='hidden'>
 			<div id='menu-header'>Projects</div>
 			<ul id='menu-selectors'>
-				<li><a href="XavierMB289.github.io" target="">Github</a></li>
-				<li><a href="https://codepen.io/XavierMB" target="">CodePen.io</a></li>
-				<li><a href="https://scratch.mit.edu/search/projects?q=Silverneon123">Scratch.mit.edu</a></li>
+				<li><a href="XavierMB289.github.io" target="_blank">Github</a></li>
+				<li><a href="https://codepen.io/XavierMB" target="_blank">CodePen.io</a></li>
+				<li><a href="https://scratch.mit.edu/search/projects?q=Silverneon123" target="_blank">Scratch.mit.edu</a></li>
 			</ul>
 		</div>
 		<div id='skills' class='hidden'>
